# scrapegoat

./: .gitignore  404.html  README.md  complex-bs.py  index.html  main.py  mkdocs.yaml  sitemap.xml
.github/workflows/: deploy.yml
core/: index.html
core/classes/block/: index.html
core/classes/commands/: index.html
core/classes/conditions/: index.html
core/classes/gardener/: index.html
core/classes/goat/: index.html
core/classes/interpreter/: index.html
core/classes/milkmaid/: index.html
core/classes/milkman/: index.html
core/classes/node/: index.html
core/classes/sheepdog/: index.html
core/exceptions/: index.html
docs/: index.md  installation.md  why-scrapegoat.md
docs/core/: gardener.md  interpreter.md
goatspeak-language-support/: .gitignore  CHANGELOG.md  LICENSE  README.md  package-lock.json  package.json  tsconfig.json  vsc-extension-quickstart.md
installation/: index.html
loom/: index.html
loom/loom/: index.html
scrapegoat/: pyproject.toml
scrapegoat-core/: .gitignore  README.md  pyproject.toml
scrapegoat-core/src/scrapegoat_core/: __init__.py
scrapegoat-core/src/scrapegoat_core/classes/: __init__.py  block.py  command.py  conditions.py  gardener.py  goat.py  interpreter.py  milkmaid.py  milkman.py  node.py  sheepdog.py  shepherd.py
scrapegoat-core/tests/: html_to_nodes_test.py
scrapegoat-loom/: README.md  pyproject.toml
search/: search_index.json
tutorials/cli-tutorial/: index.html
tutorials/core-tutorial/: index.html
tutorials/goatspeak-reference/: index.html
tutorials/loom-tutorial/: index.html
(+5 files in other folders)
