[build-system]
requires = ["setuptools>=80.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scrapegoat-core"
version = "1.3.1"
description = "A toolkit of functions, classes, and utilities for creating web scrapers."
readme = { file = "README.md", content-type = "text/markdown" }
license = { text = "MIT" }
authors = [
  { name = "Arman Chinai", email = "chinaiarman@gmail.com" }
]
requires-python = ">=3.12"

dependencies = [
  "requests>=2.31.0"
]

keywords = ["scraping", "webscraping", "automation", "html", "parsing"]

[project.urls]
Homepage = "https://github.com/ChinaiArman/scrapegoat"
Documentation = "https://chinaiarman.github.io/scrapegoat/"
Source = "https://github.com/ChinaiArman/scrapegoat"
Issues = "https://github.com/ChinaiArman/scrapegoat/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
loom = ["scrapegoat-loom>=1.3.1"]
js = [
  "playwright>=1.56.0",
]

[project.scripts]
scrapegoat = "scrapegoat_core.cli:main"
